# CRC32_multithreaded

./: CMakeLists.txt  README
src/: barrier.cc  barrier.h  converters.h  crc32.h  data_block.h  generator_task.cc  generator_task.h  logger.h  main.cc  message_queue.h  processor_pool.cc  processor_pool.h  processor_task.cc  processor_task.h  settings.cc  settings.h
